crates/musq/tests/trybuild/fail_sql_unused_named.rs
use musq::*;

fn main() -> musq::Result<()> {
    let _ = sql!("SELECT 1", id = 5)?;
    Ok(())
}
